--- a/NateSwartz.Blazor.SwApi/_ViewImports.cshtml
+++ b/NateSwartz.Blazor.SwApi/_ViewImports.cshtml
@@ -5,3 +5,4 @@
 @using Microsoft.AspNetCore.Blazor.Routing
 @using NateSwartz.Blazor.SwApi
 @using NateSwartz.Blazor.SwApi.Shared
+@using NateSwartz.Blazor.SwApi.Models
