--- a/NateSwartz.Blazor.SwApi/_ViewImports.cshtml
+++ b/NateSwartz.Blazor.SwApi/_ViewImports.cshtml
@@ -3,6 +3,7 @@
 @using Microsoft.AspNetCore.Blazor.Components
 @using Microsoft.AspNetCore.Blazor.Layouts
 @using Microsoft.AspNetCore.Blazor.Routing
+@using Microsoft.AspNetCore.Blazor.Browser.Interop
 @using NateSwartz.Blazor.SwApi
 @using NateSwartz.Blazor.SwApi.Shared
 @using NateSwartz.Blazor.SwApi.Models
